source/stylesheets/landing.css.scss
/* ... */
#hardware {
    background: rgba(97, 64, 191, 1);
    height: auto;
    width: 100%;
    padding-top: 75px;
    padding-top: 5.86vw;
    align: center;
    margin-top: -1px;
    margin-bottom: -1px;
}

#hardwareBtn {
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
    &:hover, &:focus {
        background: rgba(97, 64, 191, 1);
    }
}

#FAQ-transition {
    background: -webkit-linear-gradient(0deg, rgba(187, 89, 200, 1), rgba(97, 64, 191, 1));
    /* Chrome 10+, Saf5.1+ */
    background: -moz-linear-gradient(0deg, rgba(187, 89, 200, 1), rgba(97, 64, 191, 1));
    /* FF3.6+ */
    background: -ms-linear-gradient(0deg, rgba(187, 89, 200, 1), rgba(97, 64, 191, 1));
    /* IE10 */
    background: -o-linear-gradient(0deg, rgba(187, 89, 200, 1), rgba(97, 64, 191, 1));
    /* Opera 11.10+ */
    background: linear-gradient(0deg, rgba(187, 89, 200, 1), rgba(97, 64, 191, 1));
    /* W3C */
    height: 250px;
    height: 19.5vw;
    width: 100%;
}

#FAQ {
    background: rgba(187, 89, 200, 1);
    height: auto;
    width: 100%;
    padding-top: 75px;
    padding-top: 5.86vw;
    align: center;
    margin-top: -1px;
    margin-bottom: -1px;
}

#seeTheDifference {
    background: rgba(156, 156, 156, 1);
    height: 130%;
    width: 100%;
    padding-top: 75px;
    padding-top: 5.86vw;
    padding-left: 0;
    padding-right: 0;
    align: center;
    margin-top: -1px;
    margin-bottom: -1px;
}

#seeTheDifference-transition {
    background: -webkit-linear-gradient(0deg, rgba(156, 156, 156, 1), rgba(53, 112, 160, 1));
    /* Chrome 10+, Saf5.1+ */
    background: -moz-linear-gradient(0deg, rgba(156, 156, 156, 1), rgba(53, 112, 160, 1));
    /* FF3.6+ */
    background: -ms-linear-gradient(0deg, rgba(156, 156, 156, 1), rgba(53, 112, 160, 1));
    /* IE10 */
    background: -o-linear-gradient(0deg, rgba(156, 156, 156, 1), rgba(53, 112, 160, 1));
    /* Opera 11.10+ */
    background: linear-gradient(0deg, rgba(156, 156, 156, 1), rgba(53, 112, 160, 1));
    /* W3C */
    height: 250px;
    height: 19.5vw;
    width: 100%;
}

#aboutUs {
    background: rgba(115, 168, 176, 1);
    height: 130%;
    width: 100%;
    padding-top: 75px;
    padding-top: 5.86vw;
    align: center;
    margin-top: -1px;
    margin-bottom: -1px;
}

#aboutUs-transition {
    background: -webkit-linear-gradient(0deg, rgba(115, 168, 176, 1), rgba(98, 174, 77, 1));
    /* Chrome 10+, Saf5.1+ */
    background: -moz-linear-gradient(0deg, rgba(115, 168, 176, 1), rgba(98, 174, 77, 1));
    /* FF3.6+ */
    background: -ms-linear-gradient(0deg, rgba(115, 168, 176, 1), rgba(98, 174, 77, 1));
    /* IE10 */
    background: -o-linear-gradient(0deg, rgba(115, 168, 176, 1), rgba(98, 174, 77, 1));
    /* Opera 11.10+ */
    background: linear-gradient(0deg, rgba(115, 168, 176, 1), rgba(98, 174, 77, 1));
    /* W3C */
    height: 250px;
    height: 19.5vw;
    width: 100%;
}

#overview {
    background: rgba(255, 212, 44, 1);
    height: 130%;
    width: 100%;
    align: center;
    padding-top: 8%;
    margin-top: 70%;
    /*to not cover the splash video*/
    margin-bottom: -1px;
    color: rgba(0, 0, 0, 1);
}

#overview-transition {
    background: -webkit-linear-gradient(0deg, rgba(61, 182, 153, 1), rgba(255, 212, 44, 1));
    /* Chrome 10+, Saf5.1+ */
    background: -moz-linear-gradient(0deg, rgba(61, 182, 153, 1), rgba(255, 212, 44, 1));
    /* FF3.6+ */
    background: -ms-linear-gradient(0deg, rgba(61, 182, 153, 1), rgba(255, 212, 44, 1));
    /* IE10 */
    background: -o-linear-gradient(0deg, rgba(61, 182, 153, 1), rgba(255, 212, 44, 1));
    /* Opera 11.10+ */
    background: linear-gradient(0deg, rgba(61, 182, 153, 1), rgba(255, 212, 44, 1));
    /* W3C */
    height: 250px;
    height: 19.5vw;
    width: 100%;
}

#overviewBtn {
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
    &:hover, &:active {
        background: rgba(255, 212, 44, 0.7);
    }
}

#FAQBtn {
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
    &:hover, &:focus {
        background: rgba(187, 89, 200, 1);
    }
}

.instagram {
    &:hover, &:focus {
        color: rgba(187, 119, 62, 1);
    }
}

.pinterest {
    &:hover, &:focus {
        color: rgba(255, 25, 25, 1);
    }
}

.twitter {
    &:hover, &:focus {
        color: rgba(51, 204, 255, 1);
    }
}

.youtube {
    &:hover, &:focus {
        color: rgba(218, 38, 38, 1);
    }
}

.gplus {
    &:hover, &:focus {
        color: rgba(216, 78, 61, 1);
    }
}

.vimeo {
    &:hover, &:focus {
        color: rgba(42, 184, 232, 1);
    }
}

.facebook {
    &:hover, &:focus {
        color: rgba(59, 89, 152, 1);
    }
}

#mc_embed_signup {
    background: rgba(0, 0, 0, 0);
    clear: left;
    color: #000;
}

#mce-EMAIL {
    font: 14px Helvetica, Arial, sans-serif;
    font: 1.09vw Helvetica, Arial, sans-serif;
    text-align: center;
    border: 1px;
    padding-top: 6px;
    padding-top: .47vw;
    padding-bottom: 6px;
    padding-bottom: .47vw;
    padding-left: 12px;
    padding-left: .94vw;
    padding-right: 12px;
    padding-right: .94vw;
    border-radius: 4px;
    border-radius: .31vw;
    -moz-border-radius: 4px;
    -moz-border-radius: .31vw;
    -webkit-border-radius: 4px;
    -webkit-border-radius: .31vw;
    color: transparent;
    text-shadow: 0 0 0 #171717;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
    &:hover, &:focus {
        box-shadow: 0 0 0.5em 0.5em rgba(255, 255, 255, 0.5);
    }
}

* {
    outline: none;
}

.hover {
    position: relative;
    width: 100%;
}

#wrapper {
    height: 100%;
    width: 100%;
    position: absolute;
}
/* ... */

